02-deployment-hello.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  labels:
    app: webapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: devfest2018
        image: anatolyrugalev/devfest-2018:hello
        ports:
        - containerPort: 80
          protocol: TCP
