04-load-test.yml
apiVersion: v1
kind: Pod
metadata:
  name: yandex-tank
spec:
  containers:
  - name: yandex-tank
    image: direvius/yandex-tank
    args:
    - '-c'
    - '/etc/yandex-tank/loadtest/load.yaml'
    volumeMounts:
    - name: config
      mountPath: /etc/yandex-tank/loadtest
  volumes:
  - name: config
    configMap:
      name: yandex-tank-config
      items:
      - key: load.yaml
        path: load.yaml
