my_first_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    app: myapp
spec:
  containers:
  - name: hello-devfest
    image: busybox
    command: ['sh', '-c', 'while true; do echo Hello DevFest! && sleep 1; done']
