web_application.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-application
  labels:
    app: my-web-application
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: devfest2018
        image: anatolyrugalev/devfest-2018:1.0
        ports:
        - containerPort: 80
          protocol: TCP
