web_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: my-web-application
spec:
  type: NodePort
  selector:
    app: webapp
  ports:
  - protocol: TCP
    targetPort: 80
